[package]
name = "ipaddress"
description = "an library to handle ipv4 and ipv6 numbers"
repository = "https://github.com/mabels/ipaddress"
readme = "../README.md"
keywords = ["ip","network"]
license = "MIT"
version = "0.1.0"
authors = ["Meno Abels <meno.abels@adviser.com>"]

[dependencies]
num = "0.1.32"
num-traits = "0.1.32"
num-integer = "0.1.32"
regex = "0.1.71"
